完善了注册流程,以及Mybatis成功使用

--- a/LResume/src/main/resources/templates/register.html
+++ b/LResume/src/main/resources/templates/register.html
@@ -92,10 +92,13 @@
 
                 var jsonobject = JSON.parse(data);
                 //layer.msg(jsonobject.code);
-                if(jsonobject==undefined || jsonobject.code!==1){
-                    layer.msg("登录失败,请检查");
+                if(jsonobject.code===-1){
+                    layer.msg("服务器错误");
+                }
+                else if(jsonobject==undefined || jsonobject.code!==1){
+                    layer.msg("注册失败,请检查");
                 }else{
-                    layer.msg('登入成功', {
+                    layer.msg('注册成功', {
                         offset: '15px'
                         ,icon: 1
                         ,time: 1000
